--- a/res/layout/startup.xml
+++ b/res/layout/startup.xml
@@ -5,4 +5,11 @@
     android:layout_height="fill_parent"
     >
     <Button android:text="Button" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
+
+    <TextView
+        android:id="@+id/TV1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </LinearLayout>
